[gd_scene load_steps=5 format=3 uid="uid://di36fx4tqys8x"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_16ycw"]
[ext_resource type="AudioStream" uid="uid://bochnl7rw8dhs" path="res://assets/sounds/menu-hover.wav" id="2_5d67q"]
[ext_resource type="AudioStream" uid="uid://cvlpg0eqyg2c7" path="res://assets/sounds/game-start.mp3" id="3_4h3l2"]

[sub_resource type="LabelSettings" id="LabelSettings_sspdv"]
line_spacing = 50.0
font_size = 50

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_16ycw")

[node name="White" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(29.6917, 17.4756)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 423.0
offset_top = 200.0
offset_right = 710.0
offset_bottom = 269.0
text = "GAME OVER"
label_settings = SubResource("LabelSettings_sspdv")

[node name="MainButtons" type="VBoxContainer" parent="."]
offset_left = 512.0
offset_top = 293.0
offset_right = 605.0
offset_bottom = 394.0

[node name="RetryButton" type="Button" parent="MainButtons"]
layout_mode = 2
text = "Retry"

[node name="ExitButton" type="Button" parent="MainButtons"]
layout_mode = 2
text = "Quit"

[node name="HoverMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_5d67q")

[node name="StartGame" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4h3l2")

[connection signal="mouse_entered" from="MainButtons/RetryButton" to="." method="_on_retry_button_mouse_entered"]
[connection signal="pressed" from="MainButtons/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="mouse_entered" from="MainButtons/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="pressed" from="MainButtons/ExitButton" to="." method="_on_exit_button_pressed"]
